deployment-scripts/scripts/3.covid-depl.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: covid-exposed
  labels:
    app: covid
    api: covid-exposed
spec:
  replicas: 3
  selector:
    matchLabels:
      app: covid
      task: covid-exposed
  template:
    metadata:
      labels:
        app: covid
        task: covid-exposed
        version: v0.0.1
    spec:
      containers:
      - name: covid-exposed
        image: 10.0.26.42:5000/dp3t.exposed.protobuf.api:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 50Mi
        ports:
        - containerPort: 8080
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: covid-authcode
  labels:
    app: covid
    api: covid-authcode
spec:
  replicas: 3
  selector:
    matchLabels:
      app: covid
      task: covid-authcode
  template:
    metadata:
      labels:
        app: covid
        task: covid-authcode
        version: v0.0.1
    spec:
      containers:
      - name: covid-exposed
        image: 10.0.26.42:5000/dp3t.authcode.api:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 50Mi
        ports:
        - containerPort: 8080
