deployment-scripts/scripts/4.traefik-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: covid-exposed-api
spec:
  ports:
  - name: http
    targetPort: 8080
    port: 8080
  selector:
    app: covid
    task: covid-exposed
---
apiVersion: v1
kind: Service
metadata:
  name: covid-authcode-api
spec:
  ports:
  - name: http
    targetPort: 8080
    port: 8080
  selector:
    app: covid
    task: covid-authcode
