deployment-scripts/scripts/5.trefik-ingr.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: covid-exposed-api
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /covid/api/v1/exposed
        backend:
          serviceName: covid-exposed-api
          servicePort: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: covid-authcode-api1
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /covid/api/v1/authcode
        backend:
          serviceName: covid-authcode-api
          servicePort: http
